Retrieval file updated

--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -120,11 +120,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "23d310d0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vstore=None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bd96206b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "if not vstore:\n",
+    "\n",
+    "    print(\"ok\")"
+   ]
   }
  ],
  "metadata": {
